<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.signup.fragments.regester.registerFragment">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:fillViewport="true"
       android:layout_above="@id/policyBtn"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical"
           android:paddingLeft="20dp"
           android:paddingRight="20dp"
           android:gravity="center_horizontal"
           >
           <EditText
               android:id="@+id/nameEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
               android:layout_marginTop="8dp"
                style="@style/textStyle"
               android:background="@drawable/edittext_bg"

               android:hint="@string/name"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="text"
               android:lines="1"
               />
           <EditText
               android:id="@+id/passwordEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/poppins_regular"
               android:layout_marginTop="15dp"
               android:background="@drawable/edittext_bg"

               android:hint="@string/password"
               style="@style/textStyle"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="textPassword"
               android:lines="1"

               />
           <EditText
               android:id="@+id/emailEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/poppins_regular"
               style="@style/textStyle"
               android:layout_marginTop="15dp"
               android:background="@drawable/edittext_bg"

               android:hint="@string/email"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="textEmailAddress"
               android:lines="1"
               />
           <EditText
               android:id="@+id/addressEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/poppins_regular"
               style="@style/textStyle"
               android:layout_marginTop="15dp"
               android:background="@drawable/edittext_bg"

               android:hint="@string/address"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="text"
               android:lines="1"
               />
           <EditText
               android:id="@+id/phoneEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/textStyle"
               android:fontFamily="@font/poppins_regular"
               android:layout_marginTop="15dp"
               android:background="@drawable/edittext_bg"

               android:hint="@string/phone"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="phone"
               android:lines="1"
               />
           <TextView
               android:id="@+id/countryEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/poppins_regular"
               android:layout_marginTop="15dp"
               android:background="@drawable/edittext_bg"
               style="@style/textStyle"
               android:hint="@string/country"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="text"
               android:lines="1"
               />
           <TextView
               android:id="@+id/cityEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:fontFamily="@font/poppins_regular"
               android:layout_marginTop="15dp"
               android:background="@drawable/edittext_bg"
               style="@style/textStyle"
               android:hint="@string/city"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="text"
               android:lines="1"
               />
           <EditText
               android:id="@+id/governorateEx"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/textStyle"
               android:fontFamily="@font/poppins_regular"
               android:layout_marginTop="15dp"
               android:background="@drawable/edittext_bg"

               android:lines="1"
               android:hint="@string/governorate"
               android:minHeight="40dp"
               android:textColor="@color/black"
               android:textColorHint="@color/dorado"
               android:textSize="14sp"
               android:inputType="text"
               />

       </LinearLayout>
   </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/policyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sunset_orange"
        android:minWidth="150dp"
        android:minHeight="50dp"
        android:text="@string/policy"
        android:drawableEnd="@drawable/right_arrow_whit"
        android:drawableTint="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_gravity="center_horizontal"
         android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        />

</RelativeLayout>