<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.editProfile.EditProfileActivity">
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sunset_orange"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_marginEnd="60dp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:id="@+id/banner"
        android:layout_below="@id/toolbar"
        android:background="@drawable/bottom_curve_bg">
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            app:riv_oval="true"
            android:id="@+id/profilePic"
            />
    </LinearLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@id/policyBtn"
        android:layout_below="@id/banner"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_horizontal"
            >

            <EditText
                android:id="@+id/nameEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/emailEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                />
            <EditText
                android:id="@+id/addressEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/address"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/phoneEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/phone"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                android:inputType="phone"
                />
            <EditText
                android:id="@+id/countryEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/country"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/cityEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/city"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/governorateEx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_bg"
                android:gravity="center_vertical"
                android:hint="@string/governorate"
                android:minHeight="40dp"
                android:textColor="@color/black"
                android:textColorHint="@color/dorado"
                android:textSize="14sp"
                android:inputType="text"
                />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/sunset_orange"
        android:minWidth="150dp"
        android:minHeight="50dp"
        android:text="@string/edit"
        android:drawableTint="@color/white"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"

        />
    <include layout="@layout/loader_"
        android:id="@+id/loader"/>
</RelativeLayout>