<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    xmlns:app="http://schemas.android.com/apk/res-auto"    android:orientation="vertical"    android:gravity="center"    android:background="@color/white">    <LinearLayout        android:id="@+id/toolbar"        android:layout_width="match_parent"        android:layout_height="wrap_content"        android:background="@color/sunset_orange"        android:orientation="horizontal">        <ImageView            android:id="@+id/backBtn"            android:layout_width="50dp"            android:layout_height="50dp"            android:scaleType="centerInside"            app:srcCompat="@drawable/ic_back" />        <TextView            android:layout_width="match_parent"            android:layout_height="match_parent"            android:layout_weight="1"            android:fontFamily="@font/poppins_bold"            android:gravity="center"            android:text="@string/interests"            android:textColor="@color/white"            android:textSize="18sp"            android:layout_marginEnd="60dp"/>    </LinearLayout>    <LinearLayout        android:layout_width="match_parent"        android:layout_height="match_parent"        android:orientation="vertical"        android:gravity="center"        android:padding="20dp"        android:background="@color/white"        android:layout_below="@id/toolbar">        <TextView            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:fontFamily="@font/poppins_bold"            android:layout_gravity="center_horizontal"            android:text="@string/choose_interest"            android:textSize="24sp"            android:layout_marginTop="10dp"            android:textColor="@color/dark_red"            />        <androidx.recyclerview.widget.RecyclerView            android:layout_width="wrap_content"            android:layout_height="match_parent"            android:layout_weight="1"            android:padding="20dp"            android:id="@+id/recyclerView"            />        <Button            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:textColor="@color/white"            android:text="@string/done"            android:fontFamily="@font/poppins_bold"            android:drawablePadding="8dp"            android:textSize="17sp"            android:textAllCaps="false"            android:minWidth="150dp"            android:id="@+id/doneBtn"            />    </LinearLayout>    <include layout="@layout/loader_"        android:id="@+id/loader"/></RelativeLayout>